Migrate URLStreamHandlerFactory tests to JUnit 5
- Adds URLStreamHandlerFactoryExtension and related annotation

Signed-off-by: Matt Sicker <mattsicker@apache.org>